2002-12-12  Werner Koch  <wk@gnupg.org>

	* md.c: Added another oddball OIW OID (sha-1WithRSAEncryption).

2002-11-23  Werner Koch  <wk@gnupg.org>

	* md.c (load_digest_module): Enlarged checked_algos bitmap.
	* md4.c (func_table):  Fixed entry for md4. 
	Both by Simon Josephson.
	(transform): Copy data to get the alignment straight. Tested only
	on i386.

2002-11-10  Simon Josefsson  <jas@extundo.com>

	* cipher.c (gcry_cipher_open): Don't reject CTS flag.
	(do_cbc_encrypt, do_cbc_decrypt, cipher_encrypt) 
	(gcry_cipher_encrypt, cipher_decrypt)
	(gcry_cipher_decrypt): Support CTS flag.
	(gcry_cipher_ctl): Toggle CTS flag.

2002-11-10  Werner Koch  <wk@gnupg.org>

	* md4.c: New. By by Simon Josefsson.
	* Makefile.am (EXTRA_PROGRAMS): Add md4.c. 
	* md.c (oid_table,gcry_md_get_algo_dlen): MD4 support. 

2002-10-14  Werner Koch  <wk@gnupg.org>

	* arcfour.c (do_encrypt_stream): Don't use increment op when
	assigning to the same variable.

2002-10-10  Timo Schulz  <ts@winpt.org>

	* pubkey.c (gcry_pk_genkey): Check boundaries.
	
	* md.c (gcry_md_open): Check that algo is available and only
	valid flag values are used.
	(gcry_md_get_algo): Add error handling.
	
2002-09-26  Werner Koch  <wk@gnupg.org>

	* md.c: Include an OID for TIGER.
	* tiger.c (tiger_get_info): Use a regular OID.

2002-09-17  Werner Koch  <wk@gnupg.org>

	* random.c: Replaced mutex.h by the new ath.h.  Changed all calls.

2002-09-16  Werner Koch  <wk@gnupg.org>

	* arcfour.c (do_encrypt_stream): Use register modifier and modulo.
	According to Nikos Mavroyanopoulos this increases perfromace on
	i386 system noticable.  And I always tought gcc is clever enough.
	* md5.c (transform): Use register modifier.
	* rmd160.c (transform): Ditto.
	* sha1.c (transform): Ditto.  We hope that there are 6 free registers.
	* random.c (gcry_randomize): Rewrote to avoid malloc calls.

	* rndlinux.c (gather_random): Replaced remaining fprintfs by log_*.
	* arcfour.c (do_arcfour_setkey): Ditto.